Fixed a bug that caused the edit deal button text to display white color on mobile Safari web browser

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -65,6 +65,7 @@ button {
 }
 .edit-deal-button{
   background-color: yellow;
+  color: black;
   border-width: 1px;
   border-color: black;
   border-radius: 0.5em;
